--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-Django~=2.2.4
+certifi==2021.5.30
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+dj-database-url==0.5.0
+Django==2.2.24
+gunicorn==20.1.0
+idna==3.2
+libretranslatepy==2.1.1
+lxml==4.6.3
+pytz==2021.1
+requests==2.26.0
+sqlparse==0.4.1
+translate==3.6.1
+urllib3==1.26.6
+whitenoise==5.3.0
+psycopg2==2.7.2
